--- a/Frontend/my-app1/src/Components/Homepage.css
+++ b/Frontend/my-app1/src/Components/Homepage.css
@@ -1,10 +1,11 @@
 /* Overall layout */
 
 /* General Layout */
+
 .homepage {
   display: flex;
   min-height: 100vh;
-  background: linear-gradient(135deg, #f0f2f5, #e0e4e8);
+  background-color: #FFF8DC;
   flex-direction: column;
 }
 
