--- a/Frontend/my-app1/src/Components/Navbar.css
+++ b/Frontend/my-app1/src/Components/Navbar.css
@@ -4,7 +4,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background: linear-gradient(45deg, #a8e6cf, #dcedc1);
+    background: linear-gradient(45deg,#E0FFFF, #20B2AA);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     font-family: Arial, sans-serif;
   }
