--- a/Frontend/my-app1/src/Components/Publications.css
+++ b/Frontend/my-app1/src/Components/Publications.css
@@ -1,4 +1,5 @@
 /* Container styling */
+
 .publications-container {
   max-width: 900px;
   margin: 0 auto;
@@ -37,6 +38,7 @@
   background-color: #fdfdfd;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
+  overflow: hidden;
 }
 
 .publication-entry:hover {
@@ -54,6 +56,8 @@
 .publication-title {
   font-size: 1.4rem;
   color: #222;
+  overflow: hidden; /* Hide overflowing text */
+  text-overflow: ellipsis;
 }
 
 .publication-year {
